manifest/fastapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fastapi-app
  name: fastapi-app
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      containers:
      - name: fastapi-app
        image: ghcr.io/arogic/fastapi-app:1.0.3
        ports:
          - name: http
            containerPort: 8000
        imagePullPolicy: Always
      imagePullSecrets:
        - name: argocd-pull-secret
      nodeSelector:
        kubernetes.io/os: linux
