manifest/fastapi-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fastapi-service
  name: fastapi-service
spec:
  type: ClusterIP
  selector:
    app: fastapi-app
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8000
