manifest/fastapi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: fastapi.127.0.0.1.sslip.io
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: fastapi-service
                port:
                  number: 80
